--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+# Put your API tokens and keys here
+sample_api_token = 57d1bc1c5c02f3139a01f9ba4ca744d7
