--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,70 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.20"
+
+    // Define versions in a single place
+    ext {
+        // Sdk and tools
+        compileSdkVersion = 29
+        minSdkVersion = 21
+        targetSdkVersion = 29
+        buildToolsVersion = "30.0.2"
+        // App dependencies
+        appCompatVersion = '1.2.0'
+        constraintLayoutVersion = '2.0.4'
+        coroutinesVersion = "1.3.2"
+        fragmentVersion = '1.3.0-beta01'
+        gradleVersion = '4.1.1'
+        kotlinVersion = '1.4.20'
+        ktlintVersion = '0.30.0'
+        ktxVersion = '1.3.2'
+        lifecycleVersion = '2.2.0'
+        materialVersion = '1.2.1'
+        navigationVersion = '2.3.1'
+        recyclerViewVersion = '1.2.0-alpha06'
+        roomVersion = '2.3.0-alpha03'
+        workVersion = '2.4.0'
+        pagingVersion = '2.1.2'
+        gsonVersion = '2.8.6'
+        okhttp = '4.7.2'
+        retrofit = '2.9.0'
+        timberVersion = '4.7.1'
+        hiltVersion = '2.28-alpha'
+        serialization = '0.20.0'
+        serializationConverter = '0.5.0'
+        sdpVersion = '1.0.6'
+        bottomNavigation = '1.2.0'
+        coilVersion = '0.11.0'
+    }
+
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:$gradleVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
+plugins {
+    id "com.diffplug.gradle.spotless" version "3.13.0"
+}
+
 allprojects {
     repositories {
+        maven { url 'https://jitpack.io' }
         google()
         jcenter()
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+spotless {
+    kotlin {
+        target "**/*.kt"
+        ktlint(ktlintVersion)
+    }
 }
