--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MoviesApi">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:theme="@style/no_actionbar_theme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
