--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
         coroutinesVersion = "1.3.2"
         fragmentVersion = '1.3.0-beta01'
         gradleVersion = '4.1.1'
-        kotlinVersion = '1.4.20'
+        kotlinVersion = '1.3.72'
         ktlintVersion = '0.30.0'
         ktxVersion = '1.3.2'
         lifecycleVersion = '2.2.0'
@@ -23,7 +23,7 @@ buildscript {
         recyclerViewVersion = '1.2.0-alpha06'
         roomVersion = '2.3.0-alpha03'
         workVersion = '2.4.0'
-        pagingVersion = '2.1.2'
+        pagingVersion = '3.0.0-alpha09'
         gsonVersion = '2.8.6'
         okhttp = '4.7.2'
         retrofit = '2.9.0'
@@ -42,8 +42,12 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlinVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
